# beamtests_dd4hep

./: .gitignore  CMakeLists.txt  IV Analysis.ipynb  README.md  prototype.xml  prototype_10layers.xml  prototype_reco.py  run.sh  run_sim_proto.sh  setup.sh
.ipynb_checkpoints/: IV Analysis-checkpoint.ipynb
CALI/: CALI.cc  CMakeLists.txt
Sipm_RadTest/: make_plots.C  run_sim_sipm.sh  sipm.xml  sipm_stack.xml
Sipm_RadTest/Davis/FlowerBoard/IV_PreIrradiation/: Board62B12_UTC_20240514__17_53.txt  Board62C12_IV_UTC_20240514__18_00.txt  Board62_1_IV_UTC_20240514__17_47.txt  Board63_1_IV_UTC_20240514__15_51.txt
Sipm_RadTest/Davis/FlowerBoard/Irradiated/: Board62A12_IV_UTC_20240514__23_45.txt  Board62C12_IV_UTC_20240514__23_58.txt  Board62_2_IV_UTC_20240514__23_52.txt  Board63_1_IV_UTC_20240515__00_09.txt
Sipm_RadTest/Davis/JF_3015/IV_PreIrradiation/: 3015A8.544_IV_UTC_20240514__20_31.txt  3015B10.732_IV_UTC_20240514__17_39.txt  (+2 more)
Sipm_RadTest/JF_3015/Irradiated/: 3015A10_IV_UTC_20240515__23_33.txt
Sipm_RadTest/db/: db.py  db_lib.py  readme.md
Sipm_RadTest/simulation/: sipm.xml  sipm_stack.xml
analysis/: compare.C  plot.py
analysis/beam_test/: data.py  make_tree.py  pedestal.json  pedestal.py  readme.md
analysis/sim/: calibrate.py  config.cfg  make_tree.py  plot.C  plot.py
compact/: materials.xml  mu-.xml  mu-_steering.py  single_block.xml  steering.py
condor/: condor.job  condor.sh  doit.sh  run_eic.csh  sort.sh
data/beam_test/: readme.md
data/sim/: readme.md
geometry/: beam1.py  mu-_steering.py  prototype.xml  steering.py
prototype_simple/: .gitignore  compact  prototype.xml  prototype_reco.py  run_sim_proto.sh
scripts/: cellId.C  gen_particles.cxx
src/: ZeroDegreeCalorimeterSampling_geo.cpp
(+174 files in other folders)
